--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,13 +8,20 @@ set(LIBRARY_OUTPUT_PATH ../lib)
 project(ARCrender)
 
 find_package(OpenMP REQUIRED)
-find_package(OpenCV REQUIRED)
+
+include_directories(res/)
 
 add_compile_options(-Ofast -fopenmp)
+add_compile_options(-g)
+
 add_library(arc STATIC src/arc.cpp)
+target_compile_definitions(arc PRIVATE ARC_IMPLEMENTATION)
 link_directories(lib/)
 
 include_directories(include/)
-add_compile_options(-Dlibrary)
+
 add_executable(surface samples/surface.cpp)
 target_link_libraries(surface arc OpenMP::OpenMP_CXX)
+
+add_executable(texture samples/texture.cpp)
+target_link_libraries(texture arc OpenMP::OpenMP_CXX)
