--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,14 +14,18 @@ include_directories(res/)
 add_compile_options(-Ofast -fopenmp)
 add_compile_options(-g)
 
+add_library(stb_image STATIC res/stb_image.cpp)
+add_library(obj_loader STATIC res/tiny_obj_loader.cpp)
 add_library(arc STATIC src/arc.cpp)
-target_compile_definitions(arc PRIVATE ARC_IMPLEMENTATION)
 link_directories(lib/)
 
 include_directories(include/)
 
 add_executable(surface samples/surface.cpp)
-target_link_libraries(surface arc OpenMP::OpenMP_CXX)
+target_link_libraries(surface arc stb_image obj_loader OpenMP::OpenMP_CXX)
 
 add_executable(texture samples/texture.cpp)
-target_link_libraries(texture arc OpenMP::OpenMP_CXX)
+target_link_libraries(texture arc stb_image obj_loader OpenMP::OpenMP_CXX)
+
+add_executable(model samples/model.cpp)
+target_link_libraries(model arc stb_image obj_loader OpenMP::OpenMP_CXX)
