--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,6 @@ set(CMAKE_C_STANDARD 17)
 if (CMAKE_BUILD_TYPE EQUAL Single)
     add_compile_options(-Ofast)
 elseif (CMAKE_BUILD_TYPE EQUAL Release)
-    find_package(OpenMP REQUIRED)
     add_compile_options(-fopenmp)
     add_compile_options(-Ofast)
 elseif (CMAKE_BUILD_TYPE EQUAL Debug)
@@ -24,5 +23,9 @@ add_library(obj_loader STATIC deps/tiny_obj_loader.cpp)
 include_directories(deps/)
 
 add_library(arc STATIC include/arc.cpp)
+#if (CMAKE_BUILD_TYPE EQUAL Release)
+find_package(OpenMP)
+target_link_libraries(arc PUBLIC OpenMP::OpenMP_CXX)
+#endif()
 
 add_subdirectory(samples)
