为体积光做准备（但是挂了

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_C_STANDARD 17)
 
 
-if (CMAKE_BUILD_TYPE EQUAL Single)
-    add_compile_options(-Ofast)
-elseif (CMAKE_BUILD_TYPE EQUAL Release)
+if (CMAKE_BUILD_TYPE EQUAL Release)
     add_compile_options(-fopenmp)
     add_compile_options(-Ofast)
 elseif (CMAKE_BUILD_TYPE EQUAL Debug)
@@ -23,9 +21,8 @@ add_library(obj_loader STATIC deps/tiny_obj_loader.cpp)
 include_directories(deps/)
 
 add_library(arc STATIC include/arc.cpp)
-#if (CMAKE_BUILD_TYPE EQUAL Release)
+
 find_package(OpenMP)
 target_link_libraries(arc PUBLIC OpenMP::OpenMP_CXX)
-#endif()
 
 add_subdirectory(samples)
