--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -3,7 +3,7 @@
 # add_subdirectory(rose)
 # add_subdirectory(HelloWorld)
 add_subdirectory(scene6)
-# add_subdirectory(scene7)
-# add_subdirectory(scene8)
+add_subdirectory(scene7)
+add_subdirectory(scene8)
 # add_subdirectory(scene9)
 # add_subdirectory(scene11)
