--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -7,4 +7,4 @@ add_subdirectory(scene7)
 add_subdirectory(scene8)
 # add_subdirectory(scene9)
 # add_subdirectory(scene11)
-add_subdirectory(fireplace)
+add_subdirectory(classroom)
