--- a/samples/classroom/CMakeLists.txt
+++ b/samples/classroom/CMakeLists.txt
@@ -1,9 +1,9 @@
 include_directories(../../include)
 include_directories(../../deps)
 
-set(name "fireplace")
+set(name "classroom")
 
-add_executable(${name} fireplace.cpp)
+add_executable(${name} classroom.cpp)
 
 target_link_libraries(${name} arc)
 target_link_libraries(${name} stb_image)
