depth of field (but GG)

--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -1,10 +1,8 @@
-# add_subdirectory(texture)
-# add_subdirectory(surface)
-# add_subdirectory(rose)
-# add_subdirectory(HelloWorld)
+add_subdirectory(scene5)
 add_subdirectory(scene6)
 add_subdirectory(scene7)
 add_subdirectory(scene8)
 add_subdirectory(scene9)
 add_subdirectory(scene10)
+add_subdirectory(scene11)
 add_subdirectory(classroom)
