--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(scene9)
 add_subdirectory(scene10)
 add_subdirectory(scene11)
 add_subdirectory(classroom)
+add_subdirectory(corner)
