caustics effect & others

--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory(scene10)
 add_subdirectory(scene11)
 add_subdirectory(classroom)
 add_subdirectory(corner)
+add_subdirectory(caustics)
