--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -1,10 +1,15 @@
-add_subdirectory(scene5)
-add_subdirectory(scene6)
-add_subdirectory(scene7)
-add_subdirectory(scene8)
-add_subdirectory(scene9)
-add_subdirectory(scene10)
-add_subdirectory(scene11)
-add_subdirectory(classroom)
-add_subdirectory(corner)
-add_subdirectory(caustics)
+include_directories(../include)
+include_directories(../deps)
+
+file(GLOB SAMPLES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp")
+message(STATUS "targets: ${SAMPLES}")
+
+foreach(SAMPLE IN LISTS SAMPLES)
+    message(STATUS "target: ${SAMPLE}")
+    string(REPLACE .cpp "" TARGET ${SAMPLE})
+    add_executable(${TARGET} ${SAMPLE})
+
+    target_link_libraries(${TARGET} arc)
+    target_link_libraries(${TARGET} stb_image)
+    target_link_libraries(${TARGET} obj_loader)
+endforeach()
